--- a/mnt_wrangler.toml
+++ b/mnt_wrangler.toml
@@ -1,8 +1,9 @@
 name = "mapas-clientes"
 compatibility_date = "2025-12-04"
 
-# Cloudflare Pages - site estático com funções serverless
 [site]
 bucket = "."
 
-# Funções serverless em /functions/ são automaticamente detectadas
+# Assets estáticos (HTML, CSS, JS)
+[[assets]]
+directory = "."
